--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.10",
     "pg": "^8.0.2",
+    "rate-limiter-flexible": "^2.1.7",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.24",
@@ -47,6 +49,7 @@
     "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.3",
     "@types/nodemailer": "^6.4.0",
+    "@types/redis": "^2.8.24",
     "@typescript-eslint/parser": "^2.28.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.10.1",
