Add docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     #ports:
     #  - "3000:3000"
     depends_on:
-      - gobarber-postgres
+      - database
     networks:
       - node-network
 
