--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,7 @@ version: '3'
 
 services:
   gobarber-app:
-    build:
-      context: .
+    build: .
     container_name: app
     volumes:
       - .:/usr/src/app
@@ -13,8 +12,6 @@ services:
     #  - "3000:3000"
     depends_on:
       - database
-    networks:
-      - node-network
 
   database:
     image: postgres
@@ -35,8 +32,6 @@ services:
     restart: always
     ports:
       - 6379:6379
-    networks:
-      - node-network
 
   # mongodb:
   #   image: mongo
